crates/traits/tests/snapshots/snapshots__group.snap
---
source: crates/traits/tests/snapshots.rs
expression: "Group\n{\n    id: gid(), name: \"ops\".into(), description: \"for ops talk\".into(), epoch:\n    EpochId(3), members: vec![Member { id: mem_id(), credential: vec![], }],\n    required_capabilities: GroupCapabilities::default(), protocol_profile:\n    ProtocolProfile::Current, removed: false, unrecoverable: false, disbanded:\n    None, join_epoch: EpochId(2), local_copy_install_epoch: EpochId(2),\n}"
---
{
  "id": [
    170,
    170,
    170,
    170
  ],
  "name": "ops",
  "description": "for ops talk",
  "epoch": 3,
  "members": [
    {
      "id": [
        97,
        108,
        105,
        99,
        101
      ],
      "credential": []
    }
  ],
  "required_capabilities": {
    "proposals": [],
    "extensions": [],
    "app_components": {
      "ids": []
    }
  },
  "protocol_profile": "current",
  "removed": false,
  "unrecoverable": false,
  "join_epoch": 2,
  "local_copy_install_epoch": 2
}
