crates/traits/tests/snapshots/snapshots__ingest_outcome_rejected_authorization_failed.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Rejected\n{\n    category:\n    cgka_traits::ingest::ProposalRejectionCategory::AuthorizationFailed\n}"
---
{
  "Rejected": {
    "category": "AuthorizationFailed"
  }
}
