crates/traits/tests/snapshots/snapshots__ingest_outcome_rejected_invalid_encoding.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Rejected\n{ category: cgka_traits::ingest::ProposalRejectionCategory::InvalidEncoding }"
---
{
  "Rejected": {
    "category": "InvalidEncoding"
  }
}
