crates/traits/tests/snapshots/snapshots__ingest_outcome_rejected_invalid_self_remove.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Rejected\n{\n    category:\n    cgka_traits::ingest::ProposalRejectionCategory::InvalidSelfRemove\n}"
---
{
  "Rejected": {
    "category": "InvalidSelfRemove"
  }
}
