crates/traits/tests/snapshots/snapshots__ingest_outcome_rejected_unsupported_proposal.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Rejected\n{\n    category:\n    cgka_traits::ingest::ProposalRejectionCategory::UnsupportedProposal\n}"
---
{
  "Rejected": {
    "category": "UnsupportedProposal"
  }
}
