crates/traits/tests/snapshots/snapshots__intent_invite.snap
---
source: crates/traits/tests/snapshots.rs
expression: "SendIntent::Invite { group_id: gid(), key_packages: vec![KeyPackage::new(vec![0xEF; 4])], initial_admins: vec![], }"
---
{
  "Invite": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "key_packages": [
      {
        "bytes": [
          239,
          239,
          239,
          239
        ],
        "protocol_profile": "legacy"
      }
    ],
    "initial_admins": []
  }
}
