crates/traits/tests/snapshots/snapshots__intent_leave.snap
---
source: crates/traits/tests/snapshots.rs
expression: "SendIntent::Leave { group_id: gid() }"
---
{
  "Leave": {
    "group_id": [
      170,
      170,
      170,
      170
    ]
  }
}
