crates/traits/tests/snapshots/snapshots__intent_update_group_data.snap
---
source: crates/traits/tests/snapshots.rs
expression: "SendIntent::UpdateGroupData\n{ group_id: gid(), name: Some(\"new-name\".into()), description: None, }"
---
{
  "UpdateGroupData": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "name": "new-name",
    "description": null
  }
}
